--- a/package.json
+++ b/package.json
@@ -5,14 +5,15 @@
   "main": "src/index.js",
   "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "nodemon src/index.js",
-    "start": "nodemon src/index.js"
+    "start": "node src/index.js"
   },
   "keywords": [],
   "author": "smargelov <smargelov@gmail.com>",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^28.1.3",
     "nodemon": "^2.0.19"
   },
   "dependencies": {
@@ -22,6 +23,7 @@
     "express": "^4.18.1",
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.7"
+    "mongoose": "^6.4.7",
+    "supertest": "^6.2.4"
   }
 }
